# Rust_TODO_API_WITH_AXUM

./: .env  Cargo.toml  compose.yaml
.cargo/: config.toml
migrations/2025-12-04-024801-0000_inital_tables/: down.sql  up.sql
src/: main.rs
src/db/: migration.rs  mod.rs  models.rs  schema.rs
src/handlers/todo/: create.rs  delete.rs  get.rs  list.rs  mod.rs  models.rs  partial_update.rs
